tests/error/array_errors/non_array_copy.err
Error: Non-array copy (at $FILE:9:7)
  | 
7 | @guppy(module)
8 | def main() -> None:
9 |    y = copy("not an array")
  |        ^^^^^^^^^^^^^^^^^^^^ Expected array expression, got expression of type str

Guppy compilation failed due to 1 previous error
